Fix touch event on iOS
Adding the cursor:pointer seems to fix the touch event on iPad/iOS

--- a/src/css/select.less
+++ b/src/css/select.less
@@ -23,6 +23,7 @@
   position: relative;
   display: inline-block;
   outline: none;
+  cursor: pointer;
 }
 
 .ember-select-choice i {
